--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.frontendmentor.io/profile/anoshaahmed">Anosha Ahmed</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/anoshaahmed" target="_blank">Anosha Ahmed</a>.
     </p>
   </footer>
 </body>
